# bitcask

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
conf/: default.json
proto/: bitcaskapi.proto
src/: config.rs  engine.rs  lib.rs  logger.rs  main.rs  proto.rs  server.rs
src/engine/: disk.rs  log.rs  memtable.rs  storage.rs
src/proto/: bitcaskapi.rs
tests/: bitcask.rs
